--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Phishtopia">
     <meta name="twitter:description" content="Home of the Improbable.">
-    <meta name="twitter:image" content="https://phishtopia.com/res/images/phishLogo.png">
+    <meta name="twitter:image" content="https://phishtopia.com/images/phishLogo.png">
     <meta name="twitter:site" content="@PhishyOne">
     <meta name="twitter:creator" content="@PhishyOne">
     
@@ -35,8 +35,8 @@
 
     
     <!-- Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://phishtopia.com/res/images/phishLogo.png">
-    <link rel="icon" href="https://phishtopia.com/res/images/phishLogo.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://phishtopia.com/images/phishLogo.png">
+    <link rel="icon" href="https://phishtopia.com/images/phishLogo.png" type="image/png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -89,7 +89,7 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
         <div class="container-fluid">
-            <a class="navbar-brand" href="https://phishtopia.com"><img src="/res/images/phishLogo.png" alt="Phishtopia"
+            <a class="navbar-brand" href="https://phishtopia.com"><img src="/images/phishLogo.png" alt="Phishtopia"
                     class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
