--- a/views/simon.ejs
+++ b/views/simon.ejs
@@ -1,5 +1,5 @@
 
-<%- include('partials/header', { title: 'Simon Game', extraStyles: './styles/simon.css', bodyClass: '' }) %>
+<%- include('partials/header', { title: 'Simon Game', extraStyles: '/styles/simon.css', bodyClass: '' }) %>
 
     <!-- Main Content -->
     <main class="main-grid">
@@ -21,4 +21,4 @@
         </div>
     </main>
 
-    <%- include('partials/footer', { extraScripts: ['/res/software/simon-res/game.js'] }) %>
+    <%- include('partials/footer', { extraScripts: ['/js/simon.js'] }) %>
