--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header.ejs', { title: 'Phishtopia' , extraStyles: ["/styles/main.css"], extraScripts:
-    ["/res/js/canvas.js"], bodyClass: '' }) %>
+    ["/js/canvas.js"], bodyClass: '' }) %>
 
     <!-- Main Content -->
     <main class="main-grid">
@@ -22,7 +22,7 @@
             <h2>Eve Echoes Player Intelligence</h2>
             <p>Using publicly available killmails from the echoes.mobi api, this tool produces the likely location and
                 time of play for a chosen player.</p>
-            <a href="PlayerInt" class="btn btn-outline-light button">Echoes PlayerInt</a>
+            <a href="player-int" class="btn btn-outline-light button">Echoes PlayerInt</a>
         </section>
     </main>
 
