--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -14,10 +14,10 @@
       <section class="projects-section just-in-section">
         <h2>2026:</h2>
         <ul>
-          <li><a href="https://phullstack-b6a3287adf14.herokuapp.com/project33-2/">
+          <li><a href="/project33-2">
               <h3>Family Travel Tracker</h3>
             </a></li>
-          <li><a href="https://phishyone.github.io/Fullstack-Course/">
+          <li><a href="/static">
               <h3>App Brewery Web Dev Course Projects</h3>
             </a></li>
         </ul>
@@ -25,7 +25,7 @@
       <section class="projects-section just-in-section">
         <h2>2025:</h2>
         <ul>
-          <li><a href="https://phullstack-b6a3287adf14.herokuapp.com/project33-1/"><h3>Travel Tracker</h3></a></li>          
+          <li><a href="/project33-1"><h3>Travel Tracker</h3></a></li>          
           <li><a href="player-int"><h3>Echoes PlayInt</h3></a></li>
           <li><a href="intm-logo"><h3>Animated INTM Logo</h3></a></li>
           <li><a href="simon"><h3>Simon Game</h3></a></li>
