--- a/views/app-brewery-static/4-This-Page/index.html
+++ b/views/app-brewery-static/4-This-Page/index.html
@@ -17,8 +17,8 @@
     <p>Using html, this page showcases my knowledge on referencing images, creating hyperlinks, and structuring a simple
         webpage.</p>
     <img src="./preview.png" alt="Preview of this page with code" height=200 />
-    <p><a href="https://github.com/PhishyOne/Fullstack-Course/tree/main/Completed-Projects/4-This-Page">My Chapter 4
-            Code</a></p>
+    <p><a href="https://github.com/PhishyOne/Phishtopia.com/tree/main/views/app-brewery-static/4-This-Page/">My Chapter 4
+    Code</a></p>
     <hr />
     <h3>Chapter 3 - Birthday Invite</h3>
     <p>I learned to insert an image and made an unordered list.</p>
@@ -27,7 +27,7 @@
             alt="Birthday invitation card with colorful balloons and confetti, displaying cheerful text You are invited and event details in a festive layout, creating a joyful and celebratory atmosphere"
             height=200 />
     </a>
-    <p><a href="https://github.com/PhishyOne/Fullstack-Course/tree/main/Completed-Projects/3-Birthday">My Chapter 3
+    <p><a href="https://github.com/PhishyOne/Phishtopia.com/tree/main/views/app-brewery-static/3-Birthday">My Chapter 3
             Code</a></p>
     <hr />
     <h3>Chapter 2 - Movie Rank</h3>
@@ -37,7 +37,7 @@
             alt="Movie ranking list with a dark-themed background, featuring a top 3 list of favorite movies with titles and brief descriptions, creating a cinematic and engaging visual presentation."
             height=200 />
     </a>
-    <p><a href="https://github.com/PhishyOne/Fullstack-Course/tree/main/Completed-Projects/2-Movies">My Chapter 2
+    <p><a href="https://github.com/PhishyOne/Phishtopia.com/tree/main/views/app-brewery-static/2-Movies">My Chapter 2
             Code</a></p>
     <hr />
     <p><a href="https://phishtopia.com">Back Home</a></p>
