--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 <div class="footer gradient-background">
     <div class="footer-links">
         <p><a href="/">Home</a></p>
-        <p><a href="/app-brewery">My Course Progress</a></p>
+        <p><a href="/static">My Course Progress</a></p>
         <p><a href="/contact">Contact Me</a></p>
     </div>
 </div>
