Update Completed Projects

--- a/views/app-brewery-static/index.html
+++ b/views/app-brewery-static/index.html
@@ -14,6 +14,13 @@
     <hr />
     <h2>------Back-End Projects------</h2>
     <p>To view my code for the back-end projects, check out the <a href="https://github.com/PhishyOne/Phishtopia.com/tree/main/app-brewery-server">server</a> directory. Each project has css styling in public, JS in routes, and EJS (html) in views</p>
+    <h3>Chapter 33-3 - To Do List</h3>
+<p>For my next trick, I used each method of CRUD (Create, Read, Update, Delete) to make a simple to do list that will not erase after a refresh. This list is stored in a PostgreSQL database, so have fun and add as many (shared) items as you'd like.</p>
+    <a href="/project33-3/">
+        <img src="/project33-3/preview.png" alt="Preview of To Do List"></a>
+    <p><a href="https://github.com/PhishyOne/Phishtopia.com/tree/main/app-brewery-server/">My Chapter
+            33-3 Code</a></p>
+    <hr />
     <h3>Chapter 33-2 - Family Travel Tracker</h3>
     <p>This was just an extension of the previous project, allowing multiple users to track their travels.</p>
     <a href="/project33-2/">
