--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,7 +1,6 @@
-
 <%- include('partials/header', { title: 'Projects' , bodyClass: '' }) %>
 
-    
+
   <!-- Main Content -->
   <main class="main-grid">
     <!-- Hero Section -->
@@ -14,6 +13,9 @@
       <section class="projects-section just-in-section">
         <h2>2026:</h2>
         <ul>
+          <li><a href="/project33-3">
+            <h3>To Do List</h3>
+            </a></li>
           <li><a href="/project33-2">
               <h3>Family Travel Tracker</h3>
             </a></li>
@@ -25,12 +27,20 @@
       <section class="projects-section just-in-section">
         <h2>2025:</h2>
         <ul>
-          <li><a href="/project33-1"><h3>Travel Tracker</h3></a></li>          
-          <li><a href="player-int"><h3>Echoes PlayInt</h3></a></li>
-          <li><a href="intm-logo"><h3>Animated INTM Logo</h3></a></li>
-          <li><a href="simon"><h3>Simon Game</h3></a></li>
+          <li><a href="/project33-1">
+              <h3>Travel Tracker</h3>
+            </a></li>
+          <li><a href="player-int">
+              <h3>Echoes PlayInt</h3>
+            </a></li>
+          <li><a href="intm-logo">
+              <h3>Animated INTM Logo</h3>
+            </a></li>
+          <li><a href="simon">
+              <h3>Simon Game</h3>
+            </a></li>
       </section>
     </div>
   </main>
 
-<%- include('partials/footer') %>
+  <%- include('partials/footer') %>
