Update app routes

--- a/views/app-brewery-static/index.html
+++ b/views/app-brewery-static/index.html
@@ -19,7 +19,7 @@
     <a href="/project34/">
         <!-- <img src="/project34/preview.png" alt="Preview of Movie Database">--></a>
     <p><a href="https://github.com/PhishyOne/Phishtopia.com/tree/main/app-brewery-server/">My Chapter
-            33-3 Code</a></p>
+            34 Code</a></p>
     <hr />
     <h3>Chapter 33-3 - To Do List</h3>
 <p>For my next trick, I used each method of CRUD (Create, Read, Update, Delete) to make a simple to do list that will not erase after a refresh. This list is stored in a PostgreSQL database, so have fun and add as many (shared) items as you'd like.</p>
