Render Project 34 Page

--- a/views/project34/index.ejs
+++ b/views/project34/index.ejs
@@ -1,4 +1,4 @@
-<%- include ('partials/header'), { title: 'Movie Database' } %>
+<%- include ('../partials/header', { title: 'Movie Database' }) %>
 
     <!-- Main Content -->
     <main class="main-grid">
@@ -9,4 +9,4 @@
         </section>
     </main>
 
-    <%- include ('partials/footer') %>
+    <%- include ('../partials/footer') %>
