Create Under Construction Page for YouList

--- a/views/project34/index.ejs
+++ b/views/project34/index.ejs
@@ -1,11 +1,11 @@
-<%- include ('../partials/header', { title: 'Movie Database' }) %>
+<%- include ('../partials/header', { title: 'YouList - Movies' }) %>
 
     <!-- Main Content -->
     <main class="main-grid">
         <!-- Hero Section -->
         <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
-            <h1 class="gradient-text">Movie Database</h1>
-            <p>This will soon be a user-created movie database.</p>
+            <h1 class="gradient-text">YouList - Movies (Under Construction)</h1>
+            <p>This will soon be a peer reviewed movies list.</p>
         </section>
     </main>
 
